--- a/houzzz/src/App.css
+++ b/houzzz/src/App.css
@@ -8,28 +8,22 @@
   height: 120px;
   max-width: 400px;
   border-radius: 0.5rem;
-
   padding: 0.5rem 1rem;
-  
-  margin-bottom: 1.5rem;
-
-  @media only screen and (max-width: 1000px) {
-    margin: 0.1rem;
-    padding: 0.2rem 0.5rem;
-    font-size: 0.1rem;
-  }
+  margin-bottom: 1rem;
 }
 
 .description{
-  overflow:auto;
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none; 
-  height: 50px;
-  font-size: 0.6rem;
-}
-
-.description::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 35px;
+  line-height:120%;
+  font-size: 0.8rem;
+  display: -webkit-box;
+  line-height: 1.4;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .text-center {
@@ -67,7 +61,13 @@
 .yeast{
   font-size: 0.6rem;
   padding: 0;
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
   color: #D6A138;
+  max-width: 14rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .hovertext:before {
@@ -98,4 +98,22 @@
 .hovertext:hover:before {
   opacity: 1;
   visibility: visible;
+}
+
+@media screen and (min-width: 1400px) {
+  .hovertext {
+    font-size:1rem;
+  }
+
+  .description{
+    font-size:0.8rem;
+  }
+
+  .yeast{
+    font-size: 0.8rem;
+  }
+
+  .beer-item{
+    margin-bottom: 1.5rem;
+  }
 }
