--- a/houzzz/src/App.css
+++ b/houzzz/src/App.css
@@ -11,6 +11,11 @@
   margin-bottom: 1rem;
 }
 
+.beer-item:hover{
+  background-color: #F2F8FD;
+  cursor: pointer;
+ }
+
 .description {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -77,7 +82,7 @@
   padding: 1px 1px;
   position: absolute;
   z-index: 1;
-  left: -60%;
+  left: -160%;
   top: -16%;
 }
 
